--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labo-vuejs3",
+  "name": "labo-vuejs2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "velocity-animate": "^2.0.6",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.2.0",
