--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.7.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
