--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-resource": "^1.5.3",
     "vue-router": "^3.2.0",
     "vue-star-rating": "^1.7.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-multi-tab-state": "^1.0.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
